--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,14 @@ wandb/*
 data
 checkpoints
 results
-hojun/make_font/data/*
-hojun/models/*
-hojun/results/*
-hojun/wandb/*/*
-hojun/wandb/*
+Ko_diffusion/make_font/data/*
+Ko_diffusion/models/*
+Ko_diffusion/results/*
+Ko_diffusion/wandb/*/*
+Ko_diffusion/wandb/*
 Hangul_Characters_Image128
+Font-diff-main
+Ko_diff_base_chinese
+test_Data
+mxfont-main
+*.pyc
