--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,31 @@ hojun/wandb/*
 hojun/make_font/temp.ipynb
 hojun/nohup.out
 *.pyc
+data
+checkpoints
+results
+hojun/wandb
+make_font/data/*
+models/*
+results/*
+wandb/*
+data
+checkpoints
+results
+Ko_diffusion/make_font/data/*
+Ko_diffusion/models/*
+Ko_diffusion/results/*
+Ko_diffusion/wandb//
+Ko_diffusion/wandb/*
+Hangul_Characters_Image128
+Font-diff-main
+Ko_diff_base_chinese
+test_Data
+mxfont-main
+*.pyc
+Hangul_Characters_Image128_Grayscale
+Hangul_Characters_Image64_GrayScale
+image
+*.ipynb
+*png
+static
