--- a/Backend/app/config.yaml
+++ b/Backend/app/config.yaml
@@ -1,4 +1,4 @@
-Database_URL: null
-Image_storage_PATH: null
-Inference_URL: null
-Port: 8000
+Database_URL: mongodb://localhost:27017/mongodb
+Image_storage_PATH: temp
+Inference_URL: http://localhost:9334/predictions/diffusion_serve
+Port: '5432'
