--- a/Pipeline/torchserve/config.properties
+++ b/Pipeline/torchserve/config.properties
@@ -1,14 +1,14 @@
-inference_address=http://192.168.0.80:9334
-management_address=http://192.168.0.80:9335
-metrics_address=http://192.168.0.80:9336
+inference_address=http://localhost:9334
+management_address=http://localhost:9335
+metrics_address=http://localhost:9336
 enable_envvars_config=true
 model_store=/home/hojun/Documents/code/kubeflow/model-store
 install_py_dep_per_model=true
 models={\
-  "diffusion_serve_test": {\
+  "diffusion_serve": {\
     "1.0": {\
         "defaultVersion": true,\
-        "marName": "diffusion_serve_test.mar",\
+        "marName": "diffusion_serve.mar",\
         "minWorkers": 2,\
         "maxWorkers": 12,\
         "batchSize": 25,\
